--- a/src/View/page1.html.twig
+++ b/src/View/page1.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.html.twig' %}
 
 {% block title %}
-    {{ parent() }} - Accueil
+    {{ parent() }} - page1
 {% endblock %}
 
 {% block body %}
-    <h1>ceci est la page index</h1>
+    <h1>Hello {{ name }} !</h1>
 {% endblock %}
